# types-arpeggio

./: README.md  pyproject.toml  setup.py
arpeggio-stubs/: __init__.pyi
tests/: __init__.py  conftest.py  test_parser_python.py  test_static.py
