[tool.poetry]
name = "types-arpeggio"
version = "0.0.1-dev"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
packages = [
    { include = "arpeggio-stubs" }
]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
arpeggio = "1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
