[tool.poetry]
name = "types-arpeggio"
version = "0.0.1-dev"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
packages = [
    { include = "arpeggio-stubs" }
]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
arpeggio = "1.3"
black = "^23"
isort = "^5"


[tool.poetry.group.lint.dependencies]
mypy = "^1.4"
pyproject-flake8 = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
exclude = '.venv,.git'

[tool.isort]
line_length = 79
profile = "black"
