[tool.poetry]
name = "types-arpeggio"
version = "0.2.0.0a0.dev1"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
packages = [
    { include = "arpeggio-stubs" }
]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
arpeggio = "2.0"
black = "^23"
isort = "^5"


[tool.poetry.group.lint.dependencies]
mypy = "^1.4"
pyproject-flake8 = "^5"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "*/arpeggio/tests/*"
]

[tool.black]
line-length = 79

[tool.flake8]
exclude = '.venv,.git'

[tool.isort]
line_length = 79
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=arpeggio --cov-branch --cov-report=term-missing"
